test/langtools/tools/javac/SuperInit/EarlyInnerAccessErrorMessageTest.out
EarlyInnerAccessErrorMessageTest.java:11:34: compiler.err.cant.ref.before.ctor.called: x
1 error
